--- a/Web/Presenters/templates/components/post/microblogpost.latte
+++ b/Web/Presenters/templates/components/post/microblogpost.latte
@@ -120,7 +120,7 @@
                 </div>
                 <div class='post-edit' n:if='!$compact'></div>
                 <div class="post-menu" n:if="$compact == false">
-                    <a href="{if !$suggestion}/wall{$post->getPrettyId()}{else}javascript:void(0){/if}" class="date">{$post->getPublicationTime()}
+                    <a href="{if $suggestion ?? false}javascript:void(0){else}/wall{$post->getPrettyId()}{/if}" class="date">{$post->getPublicationTime()}
                         <span n:if="$post->getEditTime()" class="edited editedMark">({_edited_short})</span>
                     </a>
                   
@@ -159,7 +159,7 @@
                         {include "../textArea.latte", route => $commentsURL, postOpts => false, graffiti => (bool) ovkGetQuirk("comments.allow-graffiti"), post => $post, club => $club}
                     </div>
                 </div>
-                <div n:if="$suggestion && $canBePinned" class="suggestionControls">
+                <div n:if="$suggestion ?? false && $canBePinned" class="suggestionControls">
                     <input type="button" class="button" id="publish_post" data-id="{$post->getId()}" value="{_publish_suggested}">
                     <input type="button" class="button" id="decline_post" data-id="{$post->getId()}" value="{_decline_suggested}">
                 </div>
