--- a/Web/Presenters/templates/Gifts/UserGifts.latte
+++ b/Web/Presenters/templates/Gifts/UserGifts.latte
@@ -67,7 +67,7 @@
                                 </span>
 
                                 <a n:if="!empty($platform)" class="client_app" data-app-tag="{$platform}" data-app-name="{$platformDetails['name']}" data-app-url="{$platformDetails['url']}" data-app-img="{$platformDetails['img']}">
-                                    <img src="/assets/packages/static/openvk/img/app_icons_mini/{$post->getPlatform(this)}.svg">
+                                    <img src="/assets/packages/static/openvk/img/app_icons_mini/{$post->getPlatform(true)}.svg">
                                 </a>
                                 {if isset($thisUser)}
                                     &nbsp;
