chore: no warnings?

--- a/Web/Presenters/templates/@MilkshakeListView.latte
+++ b/Web/Presenters/templates/@MilkshakeListView.latte
@@ -37,6 +37,8 @@
                         "count"   => $count,
                         "amount"  => sizeof($data),
                         "perPage" => $perPage ?? \OPENVK_DEFAULT_PER_PAGE,
+                        "atTop"   => false,
+                        "tidy"    => false
                     ]}
                 </div>
             {else}
