--- a/Web/Presenters/templates/Audio/List.latte
+++ b/Web/Presenters/templates/Audio/List.latte
@@ -127,6 +127,8 @@
                     "amount"   => sizeof($audios),
                     "perPage"  => $perPage ?? \OPENVK_DEFAULT_PER_PAGE,
                     "atBottom" => true,
+                    "atTop"   => false,
+                    "tidy"    => false
                 ]}
             </div>
         </div>
@@ -150,6 +152,8 @@
                     "amount"   => sizeof($playlists),
                     "perPage"  => $perPage ?? \OPENVK_DEFAULT_PER_PAGE,
                     "atBottom" => true,
+                    "atTop"   => false,
+                    "tidy"    => false
                 ]}
             </div>
         </div>
