--- a/Web/Presenters/templates/Audio/Playlist.latte
+++ b/Web/Presenters/templates/Audio/Playlist.latte
@@ -87,6 +87,8 @@
                         "amount"   => sizeof($audios),
                         "perPage"  => $perPage ?? \OPENVK_DEFAULT_PER_PAGE,
                         "atBottom" => true,
+                        "atTop"   => false,
+                        "tidy"    => false
                     ]}
                 {/if}
             </div>
