--- a/Web/Presenters/templates/Audio/player.latte
+++ b/Web/Presenters/templates/Audio/player.latte
@@ -4,6 +4,9 @@
 {php $performers = $audio->getPerformers()}
 {php $editable = isset($thisUser) && $audio->canBeModifiedBy($thisUser)}
 
+{* default variables *}
+{php $hideButtons = $hideButtons ?? false}
+
 {* this is a bad layout. so what you can change:
 - every button must be available (and hidden if not needed) and toggled by class states (.audio_added, .audio_lyrics). So the edit function will be not so cancerous
 - there is a lot of id duplications and messed data-attributes. We don't need audioEmbed-id its left from 2022 code
