--- a/Web/Presenters/templates/Gifts/Pick.latte
+++ b/Web/Presenters/templates/Gifts/Pick.latte
@@ -73,6 +73,8 @@
                 "count"   => $count,
                 "amount"  => sizeof($gifts),
                 "perPage" => \OPENVK_DEFAULT_PER_PAGE,
+                "atTop"   => false,
+                "tidy"    => false
             ]}
         </div>
     </div>
