--- a/Web/Presenters/templates/Group/Suggested.latte
+++ b/Web/Presenters/templates/Group/Suggested.latte
@@ -28,6 +28,8 @@
                 "amount"   => sizeof($posts),
                 "perPage"  => \OPENVK_DEFAULT_PER_PAGE,
                 "atBottom" => true,
+                "atTop"   => false,
+                "tidy"    => false
             ]}
         </div>
     {/if}
