--- a/Web/Presenters/templates/Notes/List.latte
+++ b/Web/Presenters/templates/Notes/List.latte
@@ -112,6 +112,8 @@
             "amount"   => sizeof($data),
             "perPage"  => 10,
             "atBottom" => true,
+            "atTop"   => false,
+            "tidy"    => false
         ]}
         
         {else}
