--- a/Web/Presenters/templates/@layout.latte
+++ b/Web/Presenters/templates/@layout.latte
@@ -485,7 +485,7 @@
                 "at_search": {$atSearch ?? false},
                 "max_attachments": {\OPENVK_ROOT_CONF["openvk"]["preferences"]["wall"]["postSizes"]["maxAttachments"] ?? 10},
                 "max_filesize_mb": 100,
-                "current_id": {$thisUser ? $thisUser->getId() : 0},
+                "current_id": {ifset $thisUser}{$thisUser->getId()}{else}0{/ifset},
                 "disable_ajax": {$disable_ajax ?? 0},
                 "max_add_fields": {ovkGetQuirk("users.max-fields")},
                 "docs_max": {\OPENVK_ROOT_CONF["openvk"]["preferences"]["docs"]["maxSize"]},
