--- a/Web/Presenters/templates/Support/Index.latte
+++ b/Web/Presenters/templates/Support/Index.latte
@@ -90,6 +90,8 @@
                 "amount"   => sizeof($tickets),
                 "perPage"  => \OPENVK_DEFAULT_PER_PAGE,
                 "atBottom" => true,
+                "atTop"   => false,
+                "tidy"    => false
             ]}
         </div>
     {/if}
